# ci_ut_helloworld

./: .appveyor.yml  .codeclimate.yml  .deepsource.toml  .drone.yml  .gitignore  .travis.yml  CMakeLists.txt  LICENSE  LICENSE.md  README.md  azure-pipelines.yml  ci_ut_helloworld.c  ci_ut_helloworld_config.h.in  wercker.yml
.github/workflows/: ccpp.yml  semgrep.yml
.guardrails/: config.yml
